k8s-manifest/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mesh-viewer
  namespace: project-launching
  labels:
    app: mesh-viewer
spec:
  replicas: 5
  selector:
    matchLabels:
      app: mesh-viewer
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mesh-viewer
    spec:
      containers:
        - name: app
          image: registry.dp.tech/mlops/mesh-viewer:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 1
              memory: 2Gi
            limits:
              cpu: 4
              memory: 4Gi
          volumeMounts:
            - name: shared-data-volume
              mountPath: /shared_data
      restartPolicy: Always
      volumes:
        - name: shared-data-volume
          persistentVolumeClaim:
            claimName: jfs-prod
