k8s-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mesh-viewer
  namespace: project-launching
  labels:
    app: mesh-viewer
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 50002
  selector:
    app: mesh-viewer
