k8s-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: mesh-viewer
  name: mesh-viewer
  namespace: project-launching
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "500M"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Access-Control-Allow-Origin: $http_origin";
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS, DELETE, PATCH
spec:
  rules:
    - host: mesh-viewer.mlops.dp.tech
      http:
        paths:
          - backend:
              service:
                name: mesh-viewer
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
      - mesh-viewer.mlops.dp.tech
      secretName: tls.mlops.dp.tech
